# Movies

./: .gitignore  README.md  data.csv  pyproject.toml  scrapy.cfg  start.py
Movies/: items.py  pipelines.py  settings.py
Movies/spiders/: movies_spider.py
databases/: queries.py  schema.py
