[tool.poetry]
name = "movies"
version = "0.1.0"
description = ""
authors = ["Arnaud <arnaud_pesenti@yahoo.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
regex = "^2024.5.15"
dateparser = "^1.2.0"
nltk = "^3.8.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
sqlalchemy-schemadisplay = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
